--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						</div>
 					<div class="burger-menu">
 							<ul class="burger-list">
-								<li class="item list"><a class="link current-link" href="./index.html">Studio</a></li>
+								<li class="item list"><a class="blue-link" href="./index.html">Studio</a></li>
 								<li class="item list"><a class="link" href="./portfolio.html">Portfolio</a></li>
 								<li class="item list"><a class="link" href="#">Contacts</a></li>
 							</ul>
@@ -107,14 +107,14 @@
 						<li class="item icon-antenna">
 							<h3 class="second-title">Strategy</h3>
 							<p class="second-desc">
-								Our goal is to identify the business <br> problem to walk away with the perfect and creative solution.
+								Our goal is to identify the business  problem to walk away with the perfect and creative solution.
 							</p>
 						</li>
 
 						<li class="item icon-clock">
 							<h3 class="second-title">Punctuality</h3>
 							<p class="second-desc">
-								Bring the key message to the brand's audience <br> for the best price within the shortest possible time.
+								Bring the key message to the brand's audience for the best price within the shortest possible time.
 							</p>
 						</li>
 
@@ -128,7 +128,7 @@
 						<li class="item icon-astronaut">
 							<h3 class="second-title">Technologies</h3>
 							<p class="second-desc">
-								Design practice focused on digital experiences. <br> We bring forth a deep passion for problem-solving.
+								Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
 							</p>
 						</li>
 					</ul>
@@ -399,6 +399,11 @@
 				</div>
 			</div>
 		</footer>
+			<script
+			defer
+			src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+			integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+			crossorigin="anonymous"></script>
 			<script src="./js/mobile-menu.js"></script>
 			<script src="./js/modal.js"></script>
 	</body>
